--- a/public/css/game.css
+++ b/public/css/game.css
@@ -194,18 +194,25 @@ body {
     position: absolute;
     inset: 0;
     pointer-events: none;
-    opacity: 0.35;
-    background-repeat: repeat;
-    background-size: 90px 90px;
-    animation: rain 1.1s linear infinite;
     z-index: 0;
+    overflow: hidden;
 }
 
-.overlay.win .rain-layer {
+.rain-item {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.7;
+    animation: fall 4s linear infinite;
+}
+
+.overlay.win .rain-item {
     background-image: url("../images/money.png");
 }
 
-.overlay.lose .rain-layer {
+.overlay.lose .rain-item {
     background-image: url("../images/sad.png");
 }
 
@@ -241,11 +248,11 @@ body {
     flex-wrap: wrap;
 }
 
-@keyframes rain {
+@keyframes fall {
     from {
-        background-position: 0 -600px;
+        transform: translateY(0);
     }
     to {
-        background-position: 0 600px;
+        transform: translateY(110vh);
     }
 }
